# IotDeviceHub

./: .gitignore  BluezAbstructLayer.cpp  BluezAbstructLayer.h  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  SensorDataParser.h  SwtichBotApiDataParser.cpp  SwtichBotApiDataParser.h  iotdevicehub.service  main.cpp
.github/workflows/: ci.yaml
BluezAbstructLayer/: BluezAbstructLayer.h  SwtichBotApiDataParser.h
IotDeviceHubManager/: IotDeviceHubManager.cpp  IotDeviceHubManager.h  main.cpp
MqttAbstructLayer/: SwitchBotObserver.cpp  SwitchBotObserver.h
ble/: BleAbstructLayer.h  BleDbusConnectionManager.cpp  BleDbusConnectionManager.h  BleDbusScanManager.cpp  BleDbusScanManager.h  BleScanManager.h  BleSockScanManager.cpp  BluezAbstructLayer.cpp  BluezAbstructLayer.h  MotionSensorDataHandler.cpp  MotionSensorDataHandler.h  SwtichBotApiDataParser.cpp  WoSensorTHDataHandler.cpp  WoSensorTHDataHandler.h
ble/bluez/: BluezAbstructLayer.cpp  BluezAbstructLayer.h
ble/dbus/: BluezDbusLayer.cpp  BluezDbusLayer.h
ble/hci/: HciAbstructLayer.cpp  HciAbstructLayer.h
ble/sock/: BluezSockLayer.cpp  BluezSockLayer.h
client/: main.cpp
config/: template_config.json
devices/: MotionSensorDataHandler.cpp  WoBulbHandler.cpp  WoBulbHandler.h  WoHandHandler.cpp  WoHandHandler.h  WoMotionSensorHandler.cpp  WoMotionSensorHandler.h  WoSensorTHDataHandler.cpp  WoSensorTHDataHandler.h
include/: BluetoothAbstructLayer.h  MqttTopicList.h  SensorDataHandler.h  SensorDataParser.h  SensorObserver.h
mqtt/: MqttManager.cpp  MqttManager.h
src/: CMakeLists.txt
src/IotDeviceHubManager/: IotDeviceHubManager.cpp
src/ble/: BleAbstructLayer.cpp  BleConnectionManager.h  BleDbusConnectionManager.cpp  BleDbusConnectionManager.h  BleDbusScanManager.cpp  BleDbusScanManager.h  BleScanManager.h  BleSockScanManager.h  BluezSdbusHandler.cpp  BluezSdbusHandler.h  BluezSdbusManager.cpp  BluezSdbusManager.h  IBleManager.h
src/devices/: BleDeviceHandler.h  WoBulbHandler.cpp  WoBulbHandler.h  WoHandHandler.h  WoMotionSensorHandler.cpp  WoMotionSensorHandler.h
src/iot_device_hub_manager/: IotDeviceHubManager.cpp  IotDeviceHubManager.h  IotEventManager.cpp  IotEventManager.h
src/iot_event_manager/: IIotEventManager.h  IotEventManager.cpp  IotEventManager.h
src/mqtt/: IMqttManager.h  MqttManager.cpp  MqttManager.h
tests/: CMakeLists.txt  README.md
tests/mocks/: CMakeLists.txt  IotEventManagerMock.h  MosquittoMock.cpp  MosquittoMock.h  MqttManagerMock.h
tests/unit-tests/: CMakeLists.txt  Test_WoBulbHandler.cpp  Test_WoHandHandler.cpp
tests/unit-tests/ble/: CMakeLists.txt
tests/unit-tests/devices/: CMakeLists.txt  Test_WoBulbHandler.cpp  Test_WoMotionSensorHandler.cpp
tests/unit-tests/iot_device_hub_manager/: CMakeLists.txt  Test_IotDeviceHubManager.cpp
tests/unit-tests/mqtt/: CMakeLists.txt  Test_MqttManager.cpp
